k8s/phpmyadmin/manifest-files/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  selector:
    app: phpmyadmin
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
